--- a/client/src/styles/Layout.css
+++ b/client/src/styles/Layout.css
@@ -69,3 +69,26 @@
 .active a, .active i{
     color: rgba(51, 7, 11, 0.825)
 }
+
+.header-content{
+    margin: 0 15px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    height: 40px;
+
+}
+
+.header-content i{
+    margin-right: 20px;
+    font-size: 1.2rem;
+    color: rgba(51, 7, 11, 0.825);
+}
+
+.header-content a{
+    text-decoration: none;
+    color: rgba(51, 7, 11, 0.825);
+    margin: 0, 10px;
+    text-transform: uppercase;
+    font-size: 1.2rem;
+}
