--- a/client/src/styles/Layout.css
+++ b/client/src/styles/Layout.css
@@ -71,7 +71,7 @@
 }
 
 .header-content{
-    margin: 0 15px;
+    margin: 10 15px;
     display: flex;
     align-items: center;
     justify-content: flex-end;
@@ -80,7 +80,7 @@
 }
 
 .header-content i{
-    margin-right: 20px;
+    margin-right: 1px;
     font-size: 1.2rem;
     color: rgba(17, 91, 183, 0.825);
 }
@@ -88,7 +88,7 @@
 .header-content a{
     text-decoration: none;
     color: rgba(51, 7, 11, 0.825);
-    margin: 0, 10px;
+    margin: 20px;
     text-transform: uppercase;
     font-size: 1.2rem;
 }
